# example_lib_gatb

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
